added form checklists

--- a/index.html
+++ b/index.html
@@ -51,6 +51,29 @@
     <div id="note">
       
     </div>
+    <div id="overlay">
+      <div class="left-column">
+        <form>
+          <li><input type="checkbox" id="milk"> <label for="milk">1 1/2 cups milk</label></li>
+          <li><input type="checkbox" id="mascarpone"> <label for="mascarpone">1/2 cup mascarpone</label></li>
+          <li><input type="checkbox" id="salt"> <label for="pink">1/2 tsp pink salt</label></li>
+          <li><input type="checkbox" id="figs"> <label for="figs">1 lb Black Mission Figs</label></li>
+          <li><input type="checkbox" id="brown-sugar"> <label for="brown-sugar">1/ cup brown sugar</label></li>
+          <li><input type="checkbox" id="water"> <label for="water">2-4 tbs water</label></li>
+        </form>
+      </div>
+      <div class="right-column">
+        <form>
+          <li><input type="checkbox" id="heavy-cream"> <label for="cream">1 1/2 cups heavy cream</label></li>
+          <li><input type="checkbox" id="sugar"> <label for="sugar"><s>4/3 granulated sugar</s></label></li>
+          <li><input type="checkbox" id="eggs"> <label for="yolks"><s>2 egg yolks</s></label></li>
+          <li><input type="checkbox" id="lemon"> <label for="lemon">1 lemon juiced</label></li>
+          <li><input type="checkbox" id="butter"> <label for="butter">2 tbsp butter</label></li>
+          <li><input type="checkbox" id="honey"> <label for="honey">1 cup honey roasted pecans, roughly chopped</label>
+          </li>
+        </form>
+      </div>
+    </div>
   </main>
   
 </body>
