--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Yellowtail&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Fuzzy+Bubbles&family=Oswald:wght@500&display=swap" rel="stylesheet">
   
 </head>
 <body>
@@ -36,8 +38,10 @@
 
   <main>
     <h1>Chocolate Pizza</h1>
-    <h2>POSTED ON 15 DEC 2013 / DESSERTS</h2>
-    <div id="icon"><img src="img/print-icon.png" alt="print"></div>
+    <ul id="post">
+      <li><h2>POSTED ON 15 DEC 2013 / DESSERTS</h2></li>
+      <li><img src="img/print-icon.png" alt="print"> PRINT</li>
+    </ul>
     <img src="img/choco-pizza.png" alt="choco-pizza">
     <p>
       For the fig-swirl: Melt butter over medium heat in a saucepan. Add brown sugar and stir to dessolve. Halve all of the figs and toss in the saucepan with water and lemon juice. Cook over medium heat, stirring frequently, until you have chunky-jammy mixture. Add salt with one or two stirs, set aside and let cool completely.
@@ -49,7 +53,8 @@
       Using an ice cream machine, pour liquids into the frozen bassin and process according to manufacturer instruction, i.e., let spin and thicken for 20 minutes before adding mascarpone, fig jam mixture and the nuts. Continue to process for =/- 10 minutes. Pour semi-frozen mixture intro a pyrex dish glass tupperware. Freeze for at least two hours before serving.
     </p>
     <div id="overlay">
-      <div class="left-column">
+      <li>
+        <div class="column1">
         <form>
           <li><input type="checkbox" id="milk"> <label for="milk">1 1/2 cups milk</label></li>
           <li><input type="checkbox" id="mascarpone"> <label for="mascarpone">1/2 cup mascarpone</label></li>
@@ -58,8 +63,10 @@
           <li><input type="checkbox" id="brown-sugar"> <label for="brown-sugar">1/ cup brown sugar</label></li>
           <li><input type="checkbox" id="water"> <label for="water">2-4 tbs water</label></li>
         </form>
-      </div>
-      <div class="right-column">
+        </div>
+      </li>
+      <li>
+      <div class="column2">
         <form>
           <li><input type="checkbox" id="heavy-cream"> <label for="cream">1 1/2 cups heavy cream</label></li>
           <li><input type="checkbox" id="sugar"> <label for="sugar"><s>4/3 granulated sugar</s></label></li>
@@ -70,8 +77,19 @@
           </li>
         </form>
       </div>
+      </li>
     </div>
+    <div id="hash"></div>
+    <img src="img/van-pic.png" alt="Vanessa Stevenson">
+    <h5>Vanessa Stevenson</h5>
+    <p>Food enthusiast ohotography fan. Add a pinch of raw foodism and that's pretty much who I am.</p>
+    <button type="button" id="share">SHARE RECIPE</button>
   </main>
+  <footer>
+    <img src="img/small-logo.png" alt="small">
+    <p>Delicious © 2013 · All Rights Reserved.</p>
+    <p>Proudly published with Ghost.</p>
+  </footer>
   
 </body>
 </html>
